[tool.poetry]
name = "panosc-sase-pulse-delivery-analysis"
version = "0.1.0"
description = ""
authors = ["Robert Rosca <32569096+RobertRosca@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.3.4"
numpy = "^1.20.1"
xarray = "^0.16.2"
karabo-data = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
